Exercise 5 worked on rejecting duplicates no matter the case theyre in using a custom comparator within the treemap dec, output was accurate, second occurences of a lowercased or uppercased name didnt overwrite the first occurrence of it